--- a/style.css
+++ b/style.css
@@ -5,6 +5,16 @@ body {
     font-size:16px;
     background-image: url(https://webfon.top/wp-content/uploads/2018/04/tic-tac-toe.png);
 }
+main { /* основное содержимое */
+  position: relative; /* боковая колонка перемещается в рамках основного содержания */
+  margin: 0 auto; /* сайт располагается по центру экрана */
+  max-width: 1200px; /* резиновая, растягивается до значения в 1200px */
+  padding-right: 310px; /* = боковая колонка + отступ в 10px */
+}
+aside { /* боковая колонка */
+  width: 300px; /* фиксированная, не меняется с изменением размера окна браузера */
+  position: absolute; top: 0; right: 0; /* прижата к верхнему правому углу */
+}
 a {
     text-decoration:none;
     margin-left:5px;
