--- a/style.css
+++ b/style.css
@@ -1,44 +1,74 @@
 body {
-    background-color:#EEEEEE;
-    padding:0;
-    margin:0;
-    font-size:16px;
-    background-image: url(https://webfon.top/wp-content/uploads/2018/04/tic-tac-toe.png);
+    font-family: 'Mukta', sans-serif;
+    background-color:#272B34;
+    padding:10px;
+    margin:0px;
+    font-size:18px;
 }
-main { /* основное содержимое */
-  position: relative; /* боковая колонка перемещается в рамках основного содержания */
-  margin: 0 auto; /* сайт располагается по центру экрана */
-  max-width: 1200px; /* резиновая, растягивается до значения в 1200px */
-  padding-right: 310px; /* = боковая колонка + отступ в 10px */
-}
-aside { /* боковая колонка */
-  width: 300px; /* фиксированная, не меняется с изменением размера окна браузера */
-  position: absolute; top: 0; right: 0; /* прижата к верхнему правому углу */
-}
-a {
-    text-decoration:none;
-    margin-left:5px;
-    margin-right:5px;
-    color:#000000;
-}
-.link {
-    background-color:#FFFFFF;
-    text-align:center;
-    height:35px;
-    padding-top:15px;
-    margin-top:10px;
-    margin-left:10px;
-    margin-right:10px;
-    border-radius:10px;
-    font-size:20px;
-    box-shadow: 0 0 5px rgba(0,0,0,0.2);
-}
-.box {
-    background-color:#FFFFFF;
-    color:#000000;
-    border-radius:10px;
+.section{
+    background-color:#3B4046;
+    border-radius:15px;
     padding:15px;
-    margin:10px;
-    margin-top:20px;
-    box-shadow: 0 0 5px rgba(0,0,0,0.2);
+    margin-bottom:10px;
+}
+#head{
+    color:#EDEDED;
+    font-size:24px;
+    text-align:center;
+    margin-bottom:15px;
+}
+#text{
+    color:#EDEDED;
+    font-size:16px;
+    margin-bottom:16px;
+}
+.submit1{
+    background-color:#00ACB3;
+    padding:12px 45px;
+    border-radius:15px;
+    cursor:pointer;
+    color:#EDEDED;
+    border:none;
+    outline:none;
+    font-weight:bold;
+    width:100%;
+    font-size:16px;
+}
+#but1{
+    background-color:#3b5998;
+    padding:12px 45px;
+    border-radius:15px;
+    cursor:pointer;
+    color:#EDEDED;
+    border:none;
+    outline:none;
+    font-weight:bold;
+    width:100%;
+    font-size:16px;
+    margin-bottom:10px;
+}
+#but2{
+    background-color:#8a3ab9;
+    padding:12px 45px;
+    border-radius:15px;
+    cursor:pointer;
+    color:#EDEDED;
+    border:none;
+    outline:none;
+    font-weight:bold;
+    width:100%;
+    font-size:16px;
+}
+#dlink{
+    color:#3B4046;
+    border-radius:10px;
+    background-color:222222;
+}
+a{
+    text-decoration:none;
+}
+#company{
+    color:#EDEDED;
+    text-align:right;
+    margin-right:10px;
 }
