--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-    font-family: 'Mukta', sans-serif;
+    font-family: 'Montserrat',sans-serif;
     background-color:#272B34;
     padding:10px;
     margin:0px;
