--- a/style.css
+++ b/style.css
@@ -1,74 +1,66 @@
 body {
-    font-family: 'Montserrat',sans-serif;
-    background-color:#272B34;
-    padding:10px;
-    margin:0px;
+    background-color:#585C68;
+    font-family: 'Mukta', sans-serif;
     font-size:18px;
+    color:#000000;
+    padding:0;
+    padding-left:10px;
+    padding-right:10px;
+    margin:0;
 }
-.section{
-    background-color:#3B4046;
-    border-radius:15px;
-    padding:15px;
-    margin-bottom:10px;
+h2 {
+    text-align:center ;
 }
-#head{
-    color:#EDEDED;
-    font-size:24px;
-    text-align:center;
-    margin-bottom:15px;
+a {
+    text-align:center ;
 }
-#text{
-    color:#EDEDED;
-    font-size:16px;
-    margin-bottom:16px;
-}
-.submit1{
-    background-color:#00ACB3;
-    padding:12px 45px;
-    border-radius:15px;
-    cursor:pointer;
-    color:#EDEDED;
-    border:none;
-    outline:none;
-    font-weight:bold;
-    width:100%;
-    font-size:16px;
-}
-#but1{
-    background-color:#3b5998;
-    padding:12px 45px;
-    border-radius:15px;
-    cursor:pointer;
-    color:#EDEDED;
-    border:none;
-    outline:none;
-    font-weight:bold;
-    width:100%;
-    font-size:16px;
-    margin-bottom:10px;
-}
-#but2{
-    background-color:#8a3ab9;
-    padding:12px 45px;
-    border-radius:15px;
-    cursor:pointer;
-    color:#EDEDED;
-    border:none;
-    outline:none;
-    font-weight:bold;
-    width:100%;
-    font-size:16px;
-}
-#dlink{
-    color:#3B4046;
+.header {
+    background-color:#333333;
+    color:#FFFFFF;
     border-radius:10px;
-    background-color:222222;
+    text-align:center;
+    line-height:height;
+    padding:15px;
+    margin-top:20px;
+    margin-bottom:20px;
 }
-a{
+.content {
+    background-color:#F1E4DC;
+    border-radius:10px;
+    padding:15px;
+    padding-bottom:20px;
+    margin-top:20px;
+    margin-bottom:20px;
+}
+.link {
+    background-color:#333333;
+    color:#FFFFFF;
+    border-radius:10px;
+    padding:15px;
+    padding-bottom:20px;
+    margin-top:20px;
+    margin-bottom:20px;
+}
+.bt {
+    display:inline-block;
     text-decoration:none;
+    background-color:#EF3C5C;
+    color:#FFFFFF;
+    border-radius:15px;
+    font-size:16px;
+    padding:15px;
+    margin-bottom:20px;
+    display:flex;
+    align-items:center;
+    justify-content:center;
+    box-shadow: 0px 0px 10px #EF3C5C;
 }
-#company{
-    color:#EDEDED;
-    text-align:right;
-    margin-right:10px;
+#bt1 {
+    background-color:;
+    color:;
+    box-shadow: 0px 0px 10px #EF3C5C;
+}
+#developer {
+    color:#F1E4DC;
+    text-align:center;
 }
