--- a/style.css
+++ b/style.css
@@ -43,9 +43,6 @@ a {
 .header {
   background-color: #F1E4DC;
   
-  padding-left: 10%;
-  padding-right: 10%;
-  
   border-radius:10px;
   
   height: 350px;
@@ -61,6 +58,8 @@ a {
   
   display: flex;
   justify-content: space-between;
+
+  margin-left: 20px;
   
   align-items: center;
   height: 60px;
@@ -190,8 +189,8 @@ a {
   
   border-radius:10px;
   padding: 10px;
-  margin-top: 25px;
-  margin-bottom: 25px;
+  margin-top: 15px;
+  margin-bottom: 15px;
   
   transition: background-color 0.2s linear;
 }
@@ -209,8 +208,8 @@ a {
 
 /*----------sheet----------*/
 .sheet {
-  width: 100px;
-  max-width: 200px;
+  width: 80px;
+  max-width: 150px;
   height: auto;
 }
 
@@ -219,6 +218,7 @@ a {
 /*----------section__text----------*/
 .section__text {
   margin-top: auto;
+  margin-left: 10px;
   margin-bottom: auto;
 }
 
@@ -276,9 +276,3 @@ a {
 .footer__link:hover {
   border-bottom: 4px solid #32435f;
 }
-
-
-
-
-
-
