--- a/style1.css
+++ b/style1.css
@@ -33,10 +33,21 @@ img {
 }
 
 #logo {
+    height: 50px;
+
     margin: 0px;
     margin-top: auto;
     margin-bottom: auto;
     padding: 0px;
+    
+    display: flex;
+    align-content: center;
+}
+
+#sposter {
+    background-image: url('background_poster.png');
+    
+    padding-bottom: 35px;
 }
 
 #poster {
@@ -47,8 +58,8 @@ img {
     justify-content: center;
 }
 
-#play {
-    display: flex;
+#video {
+    width: 100%;
     align-items: center;
     justify-content: center;
 }
@@ -63,5 +74,9 @@ img {
     display: flex;
     align-items: center;
     justify-content: center;
-};
+    justify-content: center;
 }
+
+#video {
+    width: 100%;
+} 
